# record

./: Cargo.toml  README.md  flake.nix
.claude-plugin/: marketplace.json
.claude-plugin/plugins/tap/: plugin.json
.claude-plugin/plugins/tap/skills/: tap.md
.github/workflows/: ci.yml
crates/record/: Cargo.toml
crates/record-client/: Cargo.toml
crates/record-client/src/: lib.rs  main.rs
crates/record-server/: Cargo.toml
crates/record-server/src/: lib.rs  scrollback.rs
crates/record/src/: main.rs  protocol.rs  scrollback.rs
crates/tap/: Cargo.toml
crates/tap-client/: Cargo.toml
crates/tap-client/src/: lib.rs
crates/tap-config/src/: lib.rs
crates/tap-protocol/: Cargo.toml
crates/tap-protocol/src/: lib.rs
crates/tap-server/: Cargo.toml
crates/tap-server/src/: input.rs  lib.rs
crates/tap/src/: main.rs
