[package]
name = "record-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Client library for interacting with record sessions"

[lib]
name = "record_client"
path = "src/lib.rs"

[dependencies]
record-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile = "3"
